# bandwhich

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  INSTALL.md  LICENSE.md  Makefile  PKGBUILD  README.md  build.rs  build.sh  flake.nix  git push  osx-clippy.sh
.github/: dependabot.yml
.github/workflows/: ci.yaml  nightly.yaml  publish-crate.yaml  release.yaml  require-changelog-for-PRs.yml
debian/: changelog  control  rules
docs/: bandwhich.1  what.1
src/: bandwhich  cli.rs  current_connections.rs  error.rs  lib.rs  main.rs  store.rs  traffic.rs  ui.rs
src/display/: input.rs  mod.rs  raw_terminal_backend.rs  ui.rs  ui_state.rs
src/display/components/: display_bandwidth.rs  header_details.rs  help_text.rs  layout.rs  mod.rs  table.rs  total_bandwidth.rs
src/display/components/snapshots/: bandwhich__display__components__display_bandwidth__tests__bandwidth_formatting.snap
src/network/: connection.rs  dns_queue.rs  mod.rs  resolve_connections.rs  sniffer.rs  utilization.rs
src/network/dns/: client.rs  mod.rs  resolver.rs
src/os/: errors.rs  linux.rs  lsof.rs  lsof_utils.rs  macos.rs  mod.rs  open_sockets.rs  shared.rs  windows.rs
src/store/: current_connections.rs  mod.rs  network_utilization.rs
src/tests/: mod.rs
src/tests/cases/: mod.rs  network.rs  raw_mode.rs  test_utils.rs  ui.rs
src/tests/cases/snapshots/: bandwhich__tests__cases__raw_mode__basic_startup.snap  bandwhich__tests__cases__raw_mode__multiple_packets_of_traffic_from_single_connection.snap  bandwhich__tests__cases__raw_mode__multiple_processes_with_multiple_connections.snap  bandwhich__tests__cases__raw_mode__no_resolve_mode.snap  bandwhich__tests__cases__raw_mode__one_packet_of_traffic.snap  bandwhich__tests__cases__raw_mode__sustained_traffic_from_multiple_processes.snap  bandwhich__tests__cases__ui__basic_only_addresses.snap  bandwhich__tests__cases__ui__basic_only_connections.snap  bandwhich__tests__cases__ui__basic_only_processes.snap  bandwhich__tests__cases__ui__basic_processes_with_dns_queries.snap  bandwhich__tests__cases__ui__basic_startup-2.snap  bandwhich__tests__cases__ui__basic_startup.snap  bandwhich__tests__cases__ui__bi_directional_traffic-2.snap  bandwhich__tests__cases__ui__bi_directional_traffic.snap  bandwhich__tests__cases__ui__full-width-under-30-height-draw_events-1.snap  bandwhich__tests__cases__ui__layout-full-width-under-30-height-draw_events.snap  bandwhich__tests__cases__ui__layout-under-120-width-full-height-draw_events.snap  bandwhich__tests__cases__ui__layout-under-120-width-under-30-height-draw_events.snap  bandwhich__tests__cases__ui__layout-under-50-width-under-50-height-draw_events-1.snap  bandwhich__tests__cases__ui__layout-under-50-width-under-50-height-draw_events.snap  bandwhich__tests__cases__ui__layout-under-70-width-under-30-height-draw_events.snap  bandwhich__tests__cases__ui__layout_under_120_width_full_height-2.snap  bandwhich__tests__cases__ui__layout_under_120_width_under_30_height-2.snap  bandwhich__tests__cases__ui__layout_under_120_width_under_full_height.snap  bandwhich__tests__cases__ui__layout_under_150_width_under_30_height-2.snap  bandwhich__tests__cases__ui__layout_under_50_width_under_50_height-2.snap  bandwhich__tests__cases__ui__layout_under_50_width_under_50_height.snap  bandwhich__tests__cases__ui__layout_under_70_width_under_30_height-2.snap  bandwhich__tests__cases__ui__multiple_connections_from_remote_address-2.snap  bandwhich__tests__cases__ui__multiple_connections_from_remote_address.snap  (+128 more)
src/tests/fakes/: fake_input.rs  fake_output.rs  mod.rs
src/tests/snapshots/: tests__bi_directional_traffic-2.snap  tests__layout_full_width_under_30_height-2.snap  tests__layout_full_width_under_30_height.snap  tests__layout_under_120_width_full_height-2.snap  tests__layout_under_120_width_full_height.snap  tests__layout_under_120_width_under_30_height-2.snap  tests__layout_under_120_width_under_30_height.snap  tests__layout_under_120_width_under_full_height-2.snap  tests__layout_under_150_width_full_height-2.snap  tests__layout_under_150_width_full_height.snap  tests__layout_under_150_width_under_30_height-2.snap  tests__layout_under_150_width_under_30_height.snap  tests__multiple_connections_from_remote_ip-2.snap  tests__multiple_packets_of_traffic_from_different_connections-2.snap  tests__multiple_packets_of_traffic_from_different_connections.snap  tests__multiple_packets_of_traffic_from_single_connection-2.snap  tests__multiple_processes_with_multiple_connections-2.snap  tests__one_packet_of_traffic-2.snap  tests__one_process_with_multiple_connections-2.snap  tests__sustained_traffic_from_multiple_processes-2.snap  tests__sustained_traffic_from_multiple_processes.snap  tests__sustained_traffic_from_multiple_processes_bi_directional-2.snap  tests__sustained_traffic_from_multiple_processes_bi_directional.snap  tests__sustained_traffic_from_one_process-2.snap  tests__sustained_traffic_from_one_process.snap  tests__traffic_with_host_names-2.snap  tests__traffic_with_host_names.snap  tests__traffic_with_winch_event-2.snap  tests__traffic_with_winch_event-3.snap  tests__traffic_with_winch_event.snap
src/threading/: error.rs  messages.rs  mod.rs
tests/: cli.rs  prometheus_module.rs
tests/fakes/: fake_input.rs  fake_output.rs  mod.rs
tests/snapshots/: cli__basic_startup.snap  cli__bi_directional_traffic-2.snap  cli__multiple_connections_from_remote_ip-2.snap  cli__multiple_packets_of_traffic_from_different_connections-2.snap  cli__multiple_packets_of_traffic_from_single_connection-2.snap  cli__multiple_processes_with_multiple_connections-2.snap  cli__one_packet_of_traffic-2.snap  cli__one_process_with_multiple_connections-2.snap  cli__sustained_traffic_from_multiple_processes-2.snap  cli__sustained_traffic_from_multiple_processes.snap  cli__sustained_traffic_from_multiple_processes_bi_directional-2.snap  cli__sustained_traffic_from_multiple_processes_bi_directional.snap  cli__sustained_traffic_from_one_process-2.snap  cli__sustained_traffic_from_one_process.snap  cli__traffic_with_host_names-2.snap
