[package]
name = "bandwhich"
version = "0.23.1"
authors = [
  "Aram Drevekenin <aram@poor.dev>",
  "Eduardo Toledo <etoledom@icloud.com>",
  "Eduardo Broto <ebroto@tutanota.com>",
  "Kelvin Zhang <zhangxp1998@gmail.com>",
  "Brooks Rady <b.j.rady@gmail.com>",
  "cyqsimon <28627918+cyqsimon@users.noreply.github.com>",
]
categories = ["network-programming", "command-line-utilities"]
edition = "2021"
exclude = ["src/tests/*", "demo.gif"]
homepage = "https://github.com/imsnif/bandwhich"
keywords = ["networking", "utilization", "cli"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/imsnif/bandwhich"
rust-version = "1.74.0"
description = "Display current network utilization by process, connection and remote IP/hostname"

[features]
default = []
# UI tests temporarily disabled by default, until big refactor is done
ui_test = []

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
async-trait = "0.1.83"
chrono = "0.4"
clap-verbosity-flag = "2.2.2"
clap = { version = "4.5.19", features = ["derive"] }
crossterm = "0.28.1"
derivative = "2.2.0"
ipnetwork = "0.20.0"
itertools = "0.13.0"
log = "0.4.22"
once_cell = "1.20.2"
pnet = "0.34.0"
pnet_macros_support = "0.34.0"
ratatui = "0.28.1"
resolv-conf = "0.7.0"
simplelog = "0.12.2"
thiserror = "1.0.64"
tokio = { version = "1.40", features = ["rt", "sync"] }
trust-dns-resolver = "0.23.2"
unicode-width = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
procfs = "0.17.0"

[target.'cfg(any(target_os = "macos", target_os = "freebsd"))'.dependencies]
regex = "1.11.0"

[target.'cfg(target_os = "windows")'.dependencies]
netstat2 = "0.9.1"
sysinfo = "0.32.0"

[dev-dependencies]
insta = "1.40.0"
packet-builder = { version = "0.7.0", git = "https://github.com/cyqsimon/packet_builder.git", branch = "patch-update" }
pnet_base = "0.34.0"
regex = "1.11.0"
rstest = "0.23.0"

[build-dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
clap_complete = "4.5.32"
clap_mangen = "0.2.23"
derivative = "2.2.0"
strum = { version = "0.26.3", features = ["derive"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
http_req = "0.12.0"
zip = "2.2.0"
