[package]
name = "bandwhich"
version = "0.23.1"
authors = [
  "Aram Drevekenin <aram@poor.dev>",
  "Eduardo Toledo <etoledom@icloud.com>",
  "Eduardo Broto <ebroto@tutanota.com>",
  "Kelvin Zhang <zhangxp1998@gmail.com>",
  "Brooks Rady <b.j.rady@gmail.com>",
  "cyqsimon <28627918+cyqsimon@users.noreply.github.com>",
]
categories = ["network-programming", "command-line-utilities"]
edition = "2021"
exclude = ["src/tests/*", "demo.gif"]
homepage = "https://github.com/imsnif/bandwhich"
keywords = ["networking", "utilization", "cli"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/imsnif/bandwhich"
rust-version = "1.82.0"
description = "Display current network utilization by process, connection and remote IP/hostname"

[features]
default = []
# UI tests temporarily disabled by default, until big refactor is done
ui_test = []

[dependencies]
async-trait = "0.1.88"
chrono = "0.4"
clap-verbosity-flag = "3.0.3"
clap = { version = "4.5.41", features = ["derive"] }
crossterm = "0.29.0"
derive_more = { version = "2.0.1", features = ["debug"] }
eyre = "0.6.12"
itertools = "0.14.0"
log = "0.4.27"
once_cell = "1.21.3"
pnet = "0.35.0"
pnet_macros_support = "0.35.0"
ratatui = "0.29.0"
resolv-conf = "0.7.4"
simplelog = "0.12.2"
thiserror = "2.0.12"
tokio = { version = "1.46", features = ["rt", "sync"] }
trust-dns-resolver = "0.23.2"
unicode-width = "0.2.0"
strum = { version = "0.27.1", features = ["derive"] }


[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
procfs = "0.17.0"

[target.'cfg(any(target_os = "macos", target_os = "freebsd"))'.dependencies]
regex = "1.11.1"

[target.'cfg(target_os = "windows")'.dependencies]
netstat2 = "0.11.1"
sysinfo = "0.35.2"

[dev-dependencies]
insta = "1.43.1"
packet-builder = { version = "0.7.0", git = "https://github.com/cyqsimon/packet_builder.git", branch = "patch-pnet-0.35" }
pnet_base = "0.35.0"
regex = "1.11.1"
rstest = "0.25.0"

[build-dependencies]
clap = { version = "4.5.41", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
clap_complete = "4.5.55"
clap_mangen = "0.2.28"
derive_more = { version = "2.0.1", features = ["debug"] }
eyre = "0.6.12"
strum = { version = "0.27.1", features = ["derive"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
http_req = "0.14.0"
zip = "2.4.2"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"
